tests/mut_recursive_type_invalid_base.test
let x: (rec t = t) = 42;
####
SyntaxError: Recursive types must be defined as a constructor application, function, record, or variant.
let x: (rec t = t) = 42;
                ^
